--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="hero-content">
       <h1>Ferretería El Tornillo de Oro</h1>
       <p>Todo lo que necesitas para construir, reparar o mejorar tu hogar.</p>
+            <div style="height: 100px;"></div>
       <a href="#contacto" class="btn">Solicitar Cotización</a>
     </div>
   </header>
